--- a/src/components/MembersPage/style.css
+++ b/src/components/MembersPage/style.css
@@ -13,54 +13,70 @@
 }
 
 .addMember {
-  border: 0;
   font-size: 1.1rem;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
   transition: background-color 0.2s;
 }
 
 .addMember:hover {
-  background-color: antiquewhite;
+  background-color: antiquewhite !important;
+  color: black;
 }
 
 /*************** member ***************/
 .members {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-}
-
-.member {
-  width: 350px;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  margin: 0 auto;
 }
 
 .member-details {
   display: grid;
   grid-template-columns: auto auto;
   gap: 20px;
-  margin-bottom: 20px;
   width: 100%;
 }
 
-.field {
-  display: flex;
-  gap: 10px;
+.card {
+  width: 450px;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
-.field-detail {
+.photo-status {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.info {
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 0 10px;
+  min-height: 45px;
+  display: flex;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
-  width: 80%;
+  gap: 5px;
 }
-
+/******************************************/
 @media (width < 580px) {
   .searchMember {
-    margin: 0 auto;
+    margin: 0 auto !important;
   }
   .addMember {
-    margin: 20px auto;
-    width: 200px;
+    margin: 20px auto !important;
+    width: 200px !important;
+    height: 40px !important;
+  }
+  .member-details {
+    grid-template-columns: auto;
+  }
+  .memberInfo {
+    grid-template-columns: auto !important;
+  }
+  .card {
+    width: 90%;
+
+    margin: 0 auto;
   }
 }
