--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -7,19 +7,20 @@
 .addNewTask-btn {
   border: none;
   padding: 15px;
-  font-size: 1.2rem;
+  font-size: 1.1rem !;
   border-radius: 5px;
   transition: background-color 0.2s;
   cursor: pointer;
 }
 
 .addNewTask-btn:hover {
-  background-color: antiquewhite;
+  background-color: antiquewhite !important;
+  color: black;
 }
 
 .total {
   font-size: 1.3rem;
-  background-color: #f0f0f0;
+  background-color: antiquewhite;
   align-self: center;
   padding: 14px;
   border-radius: 5px;
