member page fetch/add member from/to database add useContext add profile to header almost complete member page

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,11 +8,15 @@ header {
 }
 
 nav {
-  padding: 20px;
+  height: 61px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 ul {
   margin: 0;
+  width: fit-content;
 }
 
 .item {
@@ -45,4 +49,7 @@ ul {
 .item:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.user {
 }
