--- a/src/components/MembersPage/style.css
+++ b/src/components/MembersPage/style.css
@@ -1,6 +1,7 @@
 .search-add {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
   padding: 20px 0;
 }
