fix some responsive issues

--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -26,3 +26,16 @@
   padding: 14px;
   border-radius: 5px;
 }
+
+.totalTasksIcon {
+  display: none !important;
+}
+
+@media (width < 580px) {
+  .totalTasks {
+    display: none;
+  }
+  .totalTasksIcon {
+    display: inline-block !important;
+  }
+}
