--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -17,12 +17,14 @@ nav {
 ul {
   margin: 0;
   width: fit-content;
+  display: flex;
+  gap: 15px;
 }
 
 .item {
   display: inline-block;
   position: relative;
-  margin: 0 15px;
+  /* margin: 0 10px; */
   text-decoration: none;
   color: black;
   font-size: 1.1rem;
